# hackertray

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  HACKING.md  LICENSE  MANIFEST.in  README.md  __main__.py  appindicator_replacement.py  in.captnemo.hackertray.yml  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
hackertray/: __init__.py  analytics.py  appindicator_replacement.py  chrome.py  firefox.py  hackernews.py  history.py  hn_test.py  linux.py  macos.py  version.py
test/: History  chrome_test.py  conftest.py  firefox_test.py  history_test.py  hn_test.py  macos_ui_test.py  news_fixture.json  version_test.py
test/safari/: History.db
