[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackertray"
version = "5.0.0"
description = "Hacker News app that sits in your System Tray"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Nemo", email = "hackertray@captnemo.in" }
]
keywords = ["hacker news", "hn", "tray", "system tray", "icon", "hackertray"]
requires-python = ">=3.11"
dependencies = [
    "pyobjc-core>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.urls]
Homepage = "https://captnemo.in/hackertray"

[project.scripts]
hackertray = "hackertray:main"

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test*"]

[tool.setuptools.package-data]
"hackertray.data" = ["hacker-tray.png", "hacker-tray-light.png"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
